alignment fix for header, footer, progress bar

--- a/src/footer.scss
+++ b/src/footer.scss
@@ -8,7 +8,8 @@
 	background: #EEEEEE;
 
 	.footer-disclaimer {
-		margin: 26px 0 0 220px;
+		margin: 26px auto;
+		width: 950px;
 
 		font-family: Source Sans Pro;
 		font-style: normal;
