--- a/src/progress-tracker.scss
+++ b/src/progress-tracker.scss
@@ -9,7 +9,7 @@
 
 	.progress-tracker{
 		width: 740px;
-		margin: 20px 350px 0 350px;
+		margin: 20px auto;
 		border-top: 4px solid white;
 
 		.progress-tracker-fill {
